@@ -1638,6 +1638,7 @@ plug-ins/pygimp/Makefile
 plug-ins/pygimp/doc/Makefile
 plug-ins/pygimp/plug-ins/Makefile
 plug-ins/rcm/Makefile
+plug-ins/rcm/images/Makefile
 plug-ins/sel2path/Makefile
 plug-ins/sgi/Makefile
 plug-ins/twain/Makefile
