@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+.xvpics
+.thumbnails
+stock-icons.list
+rcm-stock-pixbufs.h
